--- a/index.html
+++ b/index.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!--Laddar först in bootstrap sen min egna css för att min css kan påverka.-->
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <title>Bootstrap</title>
 </head>
 <body>
-    <h1> Detta är en rubtik, hoppas att den laddas in</h1>
-</body>
+  <div class="d-flex p-2" style="font-size:37px; justify-content: center; color:black; background-color: purple;">Begreppsförklaring</div>
+  <hr>
+</div>
+     <div class="container" style="background-color: rgb(139, 182, 219); ">
+      <h2 class="anton-h2">Element:</h2>  
+      <p><strong>Ett element i HTML är en del av ett HTML dokument som börjar med en starttagg och 
+      avslutas med en sluttagg. Allt ifrån ord till bilder och färger kan tillägas med hjälp av olika element.
+      Några exempel är h1, h2, img src. 
+      </strong></p>
+
+      <div class="d-flex justify-content:between">
+      <img src="element.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:1200px;">
+
+      </div>
+      </div>
+<hr>
+
+      <div class="container" style="background-color:  rgb(65, 65, 250); ">
+        <h2 class="anton-h2"> HTML:</h2>  
+          <p><strong>Står för HyperText Markup Language, är del av den grundläggande standarden
+          för World Wide Web. De flesta hemsidor skrivs i HTML och överförs med HTTP. 
+        </strong></p>
+        <div class="d-flex justify-content:between">
+        <img src="HTML_logo.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:400px; margin-bottom:2%;">
+        </div>
+      </div>
+<hr>
+
+<div class="container" style="background-color: rgb(0, 68, 255); ">
+  <h2 class="anton-h2"> ID:</h2>  
+    <p><strong> Är ett sätt att döpa ett element i html. Som en class fast ID gör elementet unikt.
+      Detta gör att man bara kan använda ID en gång per HTML. Med hjällp av ID:et kan man ändra saker i elementet i css till exemplel. 
+  </strong></p>
+  <div class="d-flex justify-content:between">
+    <img src="ID.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:600px; margin-bottom:2%;">
+
+</div>
+  </div>
+<hr>
+  <div class="container" style="background-color: rgb(2, 54, 199); ">
+    <h2 class="anton-h2"> Class:</h2>  
+      <p><strong> Man kan använda sig av classes i html för att namnge ett element och sedan
+        på ett lätt sätt kunna ändra på detta i en css fil till exempel. 
+    </strong></p>
+    <div class="d-flex justify-content:between">
+      <img src="Class.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:600px; margin-bottom:2%;" >
+    </div>
+  </div>      
+
+<hr>
+<div class="container" style="background-color: rgb(11, 146, 128); ">
+  <h2 class="anton-h2"> Meta:</h2>  
+    <p><strong> Meta taggen skriver man inuti headen och dessa taggar bestämmer, teckenuppsättning, sidbeskrivning,
+      nyckelord och ägaren över dokumentet. Dessa taggar synd inte på sidan utan är information som jobbar i bakgrunden 
+      och på hela sidan. 
+  </strong></p>
+  <div class="d-flex justify-content:between">
+    <img src="Meta.jpg" class="mr-auto img-fluid a" alt="Responsive image" style="width:600px; margin-bottom:2%;" >
+  </div>
+</div>      
+<hr>
+<div class="container" style="background-color: rgb(13, 116, 102); ">
+  <h2 class="anton-h2"> Responsive:</h2>  
+    <p><strong> Gör att man innehåll ändras beroende på webbläsares olika storlekar, bilder ska t.ex. inte ta upp hela skärmen
+      om man använder mobilen t.ex. Texten ska också ändras efter olika storlekar. 
+  </strong></p>
+  <div class="d-flex justify-content:between">
+    <img src="Meta.jpg" class="mr-auto img-fluid a" alt="Responsive image" style="width:600px; margin-bottom:2%;" >
+  </div>
+</div> 
+
+
+
+
+    </body>
 </html>
