kommit en bra bit

--- a/index.html
+++ b/index.html
@@ -80,9 +80,99 @@
     <img src="Meta.jpg" class="mr-auto img-fluid a" alt="Responsive image" style="width:600px; margin-bottom:2%;" >
   </div>
 </div> 
+<hr>
+<div class="container" style="background-color: rgb(5, 73, 64); ">
+  <h2 class="anton-h2"> HTTP:</h2>  
+    <p><strong>Står för Hypertext Transfer Protocol, detta används för att föra över sidor från World Wide Web 
+    till Internet. Bygger på kommunikationen mellan klient och server, där förfrågan och svar jobbar med varandra. 
+  </strong></p>
+  <div class="d-flex justify-content:between">
+    <img src="http.jpg" class="mr-auto img-fluid a" alt="Responsive image" style="width:600px; margin-bottom:2%;" >
+  </div>
+</div> 
+<hr>
+<div class="container" style="background-color: rgb(13, 129, 85); ">
+  <h2 class="anton-h2"> HTTPS:</h2>  
+    <p><strong>Står för Hypertext Transfer Protocol Secure och används för att kryptera data från ett http dokument.
+      Detta brukar användas vid betalningar eller behandling av känslig information. Detta gör datatransporten mycket säkrare. 
+  </strong></p>
+  <div class="d-flex justify-content:between">
+    <img src="http.jpg" class="mr-auto img-fluid a" alt="Responsive image" style="width:600px; margin-bottom:2%;" >
+  </div>
+</div> 
+<hr>
+<div class="container" style="background-color: rgb(13, 129, 85); ">
+  <h2 class="anton-h2"> HTTPS:</h2>  
+    <p><strong>Står för Hypertext Transfer Protocol Secure och används för att kryptera data från ett http dokument.
+      Detta brukar användas vid betalningar eller behandling av känslig information. Detta gör datatransporten mycket säkrare. 
+  </strong></p>
+  <div class="d-flex justify-content:between">
+    <img src="https.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:400px; margin-bottom:2%;" >
+  </div>
+</div> 
+<hr>
+<div class="container" style="background-color: rgb(13, 129, 48); ">
+  <h2 class="anton-h2"> Compressed data:</h2>  
+    <p><strong> Att komprimera data betyder att man ändrar, kodar om strukturen av data för att datan ska ta upp mindre plats.
+      Detta gör att filstorlekar minskar och att man kan lagra mer data med samma diskstorlek. 
+  </strong></p>
+  <div class="d-flex justify-content:between">
+    <img src="Compressed.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:300px; margin-bottom:2%;" >
+  </div>
+</div> 
+<hr>
+<div class="container" style="background-color: rgb(24, 92, 29); ">
+  <h2 class="anton-h2"> CDN:</h2>  
+    <p><strong> Står för Content Delivery Network och minskar avståndet mellan användare och servern, detaa gör
+    att det går mycket snabbare att ladda en sida till exempel. Utan detta måste ursprungliga servrar svara varenda
+    användare och förfrågan, detta blir tungt och kan leda till förlust av data. 
+  </strong></p>
+  <div class="d-flex justify-content:between">
+    <img src="cdn.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:500px; margin-bottom:2%;" >
+  </div>
+</div> 
+<hr>
+<div class="container" style="background-color: rgb(50, 129, 13); ">
+  <h2 class="anton-h2"> Local bootstrap:</h2>  
+    <p><strong> Detta gör att man ladda saker snabbare på en sida eftersom det använder sig av CDN. 
+      Detta kan användas för att göra en hemsida snabbare och ge användarna en bättre upplevelse.
+  </strong></p>
+  <div class="d-flex justify-content:between">
+    <img src="local.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:500px; margin-bottom:2%;" >
+  </div>
+</div> 
+<hr>
+<div class="container" style="background-color: rgb(80, 126, 43); ">
+  <h2 class="anton-h2"> JQuery:</h2>  
+    <p><strong> Är det poluläraste biblioteket på webben idag. Detta innehåller javascript funktioner förenklar det
+      för utveklare att göra vanliga saker som til exempel göra effekter eller animationer. 
+  </strong></p>
+  <div class="d-flex justify-content:between">
+    <img src="Jquery.jpg" class="mr-auto img-fluid a" alt="Responsive image" style="width:500px; margin-bottom:2%;" >
+  </div>
+</div> 
+<hr>
+<div class="container" style="background-color: rgb(130, 211, 64); ">
+  <h2 class="anton-h2"> Flexbox:</h2>  
+    <p><strong> Är en layoutmodell som tillåter en att justera och fördela mellanrum innuti en container, med hjälp av
+    bredder och höjder kan man fylla en sida, och är bra att använda för att göra olika elements responsive. 
+  </strong></p>
+  <div class="d-flex justify-content:between">
+    <img src="flexbox.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:500px; margin-bottom:2%;" >
+  </div>
+</div>  
+<hr>
+<div class="container" style="background-color: rgb(130, 211, 64); ">
+  <h2 class="anton-h2"> Grid:</h2>  
+    <p><strong> Med hjälp av grid kan man dela upp en sida i olika delar, detta gör att man kan justera element enkelt.
+      Man kan enklare designa en sida utan att behöva positionera saker och använda floats lika mycket. 
+  </strong></p>
+  <div class="d-flex justify-content:between">
+    <img src="grid.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:450px; margin-bottom:2%;" >
+  </div>
+</div>  
 
 
 
-
-    </body>
+</body>
 </html>
