--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <title>Bootstrap</title>
 </head>
 <body>
-  <div class="d-flex p-2" style="font-size:37px; justify-content: center; color:black; background-color: purple;">Begreppsförklaring</div>
+  <div class="d-flex p-2" style="font-size:37px; justify-content: center; color:black; background-color: purple;">Begreppsförklaringar Webbutveckling</div>
   <hr>
 </div>
      <div class="container" style="background-color: rgb(139, 182, 219); ">
       <h2 class="anton-h2">Element:</h2>  
       <p><strong>Ett element i HTML är en del av ett HTML dokument som börjar med en starttagg och 
       avslutas med en sluttagg. Allt ifrån ord till bilder och färger kan tillägas med hjälp av olika element.
-      Några exempel är h1, h2, img src. 
+      Några exempel är h1, h2, img src. I elementen kan man till exempel lägga till bilder. 
       </strong></p>
 
       <div class="d-flex justify-content:between">
@@ -33,7 +33,7 @@
           för World Wide Web. De flesta hemsidor skrivs i HTML och överförs med HTTP. 
         </strong></p>
         <div class="d-flex justify-content:between">
-        <img src="HTML_logo.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:400px; margin-bottom:2%;">
+        <img src="html2.jpg" class="mr-auto img-fluid a" alt="Responsive image" style="width:400px; margin-bottom:2%;">
         </div>
       </div>
 <hr>
@@ -52,7 +52,7 @@
   <div class="container" style="background-color: rgb(2, 54, 199); ">
     <h2 class="anton-h2"> Class:</h2>  
       <p><strong> Man kan använda sig av classes i html för att namnge ett element och sedan
-        på ett lätt sätt kunna ändra på detta i en css fil till exempel. 
+        på ett lätt sätt kunna ändra på detta i en css fil till exempel. Man namnger element för att kunna ändra på dom i en css fil till exempel. 
     </strong></p>
     <div class="d-flex justify-content:between">
       <img src="Class.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:600px; margin-bottom:2%;" >
@@ -74,7 +74,8 @@
 <div class="container" style="background-color: rgb(13, 116, 102); ">
   <h2 class="anton-h2"> Responsive:</h2>  
     <p><strong> Gör att man innehåll ändras beroende på webbläsares olika storlekar, bilder ska t.ex. inte ta upp hela skärmen
-      om man använder mobilen t.ex. Texten ska också ändras efter olika storlekar. 
+      om man använder mobilen t.ex. Texten ska också ändras efter olika storlekar. Detta gör att det ser mycket bättre ut
+      på telefonen till exempel och all funktionalitet behålls. 
   </strong></p>
   <div class="d-flex justify-content:between">
     <img src="Meta.jpg" class="mr-auto img-fluid a" alt="Responsive image" style="width:600px; margin-bottom:2%;" >
@@ -95,26 +96,19 @@
   <h2 class="anton-h2"> HTTPS:</h2>  
     <p><strong>Står för Hypertext Transfer Protocol Secure och används för att kryptera data från ett http dokument.
       Detta brukar användas vid betalningar eller behandling av känslig information. Detta gör datatransporten mycket säkrare. 
+      Man kan se dessa webbadresser vid bankinloggningar med mera. 
   </strong></p>
   <div class="d-flex justify-content:between">
     <img src="http.jpg" class="mr-auto img-fluid a" alt="Responsive image" style="width:600px; margin-bottom:2%;" >
   </div>
 </div> 
-<hr>
-<div class="container" style="background-color: rgb(13, 129, 85); ">
-  <h2 class="anton-h2"> HTTPS:</h2>  
-    <p><strong>Står för Hypertext Transfer Protocol Secure och används för att kryptera data från ett http dokument.
-      Detta brukar användas vid betalningar eller behandling av känslig information. Detta gör datatransporten mycket säkrare. 
-  </strong></p>
-  <div class="d-flex justify-content:between">
-    <img src="https.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:400px; margin-bottom:2%;" >
-  </div>
-</div> 
+
 <hr>
 <div class="container" style="background-color: rgb(13, 129, 48); ">
   <h2 class="anton-h2"> Compressed data:</h2>  
     <p><strong> Att komprimera data betyder att man ändrar, kodar om strukturen av data för att datan ska ta upp mindre plats.
-      Detta gör att filstorlekar minskar och att man kan lagra mer data med samma diskstorlek. 
+      Detta gör att filstorlekar minskar och att man kan lagra mer data med samma diskstorlek. Detta möjliggör att man kan skicka mer
+      filer och snabbare. 
   </strong></p>
   <div class="d-flex justify-content:between">
     <img src="Compressed.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:300px; margin-bottom:2%;" >
@@ -136,6 +130,7 @@
   <h2 class="anton-h2"> Local bootstrap:</h2>  
     <p><strong> Detta gör att man ladda saker snabbare på en sida eftersom det använder sig av CDN. 
       Detta kan användas för att göra en hemsida snabbare och ge användarna en bättre upplevelse.
+      Man kan säga att sidan är optimerad. 
   </strong></p>
   <div class="d-flex justify-content:between">
     <img src="local.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:500px; margin-bottom:2%;" >
@@ -145,7 +140,8 @@
 <div class="container" style="background-color: rgb(80, 126, 43); ">
   <h2 class="anton-h2"> JQuery:</h2>  
     <p><strong> Är det poluläraste biblioteket på webben idag. Detta innehåller javascript funktioner förenklar det
-      för utveklare att göra vanliga saker som til exempel göra effekter eller animationer. 
+      för utveklare att göra vanliga saker som til exempel göra effekter eller animationer. Detta snabbar upp och möjliggör 
+      att arbeten inom webb blir enklare. 
   </strong></p>
   <div class="d-flex justify-content:between">
     <img src="Jquery.jpg" class="mr-auto img-fluid a" alt="Responsive image" style="width:500px; margin-bottom:2%;" >
@@ -155,7 +151,8 @@
 <div class="container" style="background-color: rgb(130, 211, 64); ">
   <h2 class="anton-h2"> Flexbox:</h2>  
     <p><strong> Är en layoutmodell som tillåter en att justera och fördela mellanrum innuti en container, med hjälp av
-    bredder och höjder kan man fylla en sida, och är bra att använda för att göra olika elements responsive. 
+    bredder och höjder kan man fylla en sida, och är bra att använda för att göra olika elements responsive. Detta är ett hjälpmedel
+    som gör det smidigare att aligna items och olike element. 
   </strong></p>
   <div class="d-flex justify-content:between">
     <img src="flexbox.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:500px; margin-bottom:2%;" >
@@ -171,8 +168,16 @@
     <img src="grid.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:450px; margin-bottom:2%;" >
   </div>
 </div>  
-
-
-
+<hr>
+<div class="container" style="background-color: rgb(130, 211, 64); ">
+  <h2 class="anton-h2"> Code snippets:</h2>  
+    <p><strong> Snippets är återanvändbar källkod, maskinkod och text som gör det enklare att programmera
+      i stora programmeringsprojekt, detta förenklar programmeringen och gör att det går snabbare. 
+  </strong></p>
+  <div class="d-flex justify-content:between">
+    <img src="code-snippet-description-author.png" class="mr-auto img-fluid a" alt="Responsive image" style="width:300px; margin-bottom:2%;" >
+  </div>
+</div>  
+<hr>
 </body>
 </html>
